# magic-coder

./: README.md  pyproject.toml
config/: pipeline.yaml  prompt.txt
docs/: api-coder-comment.md
scripts/: run
shared/: pyproject.toml
shared/src/magicc_shared/container/: __init__.py  command_container.py
shared/src/magicc_shared/core/: __init__.py  command.py  context.py  result.py
shared/src/magicc_shared/data_access/config/: share_database_config.py
shared/src/magicc_shared/data_access/model/: share_models.py
shared/src/magicc_shared/llm/: __init__.py  client.py  llm_manager.py  ollama_manager.py
shared/src/magicc_shared/llm/providers/: __init__.py  ollama_provider.py
shared/src/magicc_shared/utils/: __init__.py  file_scanner.py
